--- a/iOS_APP/180128/CalculatorTest/Base.lproj/Main.storyboard
+++ b/iOS_APP/180128/CalculatorTest/Base.lproj/Main.storyboard
@@ -233,7 +233,7 @@
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="T1L-nY-NxX">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="9Pj-O9-7Kp">
                                         <rect key="frame" x="0.0" y="561.5" width="359" height="85.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gtS-ve-XUe">
