Segue multi variable
Page3 use age and name2, 2variable

--- a/iOS_APP/180128/SomeApp/SomeApp/Base.lproj/Main.storyboard
+++ b/iOS_APP/180128/SomeApp/SomeApp/Base.lproj/Main.storyboard
@@ -133,7 +133,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="test3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gtJ-Sv-z8u">
-                                <rect key="frame" x="169" y="339" width="40" height="21"/>
+                                <rect key="frame" x="170" y="271" width="40" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -147,12 +147,20 @@
                                     <segue destination="BYZ-38-t0r" kind="show" id="92G-vH-S6n"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="test4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PdC-wD-tbJ">
+                                <rect key="frame" x="169" y="317" width="40" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="TkS-rQ-J2o"/>
                     </view>
                     <connections>
                         <outlet property="myAgeLabel" destination="gtJ-Sv-z8u" id="74t-YK-JfH"/>
+                        <outlet property="myNameLabel" destination="PdC-wD-tbJ" id="Bki-xo-Zxk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fTK-Wg-NLK" userLabel="First Responder" sceneMemberID="firstResponder"/>
